<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/main_title_textbox"
        android:textSize="35sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:text="@string/result_text"
        android:textSize="30sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/result_alpha_value"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:text="@string/result_alpha_textbox"
        android:textSize="30sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/result_num_value"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:text="@string/result_num_textbox"
        android:textSize="30sp"
        android:gravity="center"/>

</LinearLayout>