<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical"
        android:id="@+id/linearlayout"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/nom_application"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:orientation="vertical"
            android:text="@string/application_name"/>

        <TextView
            android:id="@+id/nom_auteur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:orientation="vertical"
            android:text="@string/application_creator"/>

        <TextView
            android:id="@+id/num_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:orientation="vertical"
            android:text="@string/application_version"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:elevation="5dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                />
        </com.google.android.material.appbar.AppBarLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_text_size"
            android:text="@string/main_title_textbox"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="@dimen/main_textview_margin"
            android:gravity="center"/>

        <ImageView
            android:layout_width="@dimen/main_img_size"
            android:layout_height="@dimen/main_img_size"
            android:layout_gravity="center"
            app:srcCompat="@drawable/weightlogo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_weight_textbox"
            android:textColor="@color/black"
            android:textSize="@dimen/main_text_size"
            android:layout_margin="@dimen/main_textview_margin"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/widget.IMC.TextInputLayer.Weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_hint_weight"
            android:textColorHint="@color/teal_200"
            android:layout_marginStart="@dimen/main_margin_start"
            android:layout_marginBottom="@dimen/main_margin_bottom"
            android:layout_marginEnd="@dimen/main_margin_end">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main_taille_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size"
                android:inputType="number"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_height_textbox"
            android:textColor="@color/black"
            android:textSize="@dimen/main_text_size"
            android:layout_margin="@dimen/main_textview_margin"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/widget.IMC.TextInputLayer.Height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_hint_size"
            android:textColorHint="@color/teal_200"
            android:layout_marginStart="@dimen/main_margin_start"
            android:layout_marginBottom="@dimen/main_margin_bottom"
            android:layout_marginEnd="@dimen/main_margin_end">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main_poids_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size"
                android:inputType="number"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:orientation="horizontal">

            <Button
                android:id="@+id/main_validate_button"
                style="@style/Widget.IMC.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/main_cancel_button"
                android:textSize="@dimen/main_text_button"
                android:text="@string/main_validate_button"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/main_cancel_button"
                style="@style/Widget.IMC.Button.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_button"
                android:layout_alignParentEnd="true"
                android:text="@string/main_cancel_button"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>